force-app/main/default/objects/User_Licenses__c/User_Licenses__c.object-meta.xml
<CustomObject>
    <description>Custom object to store the allocation of user licenses in monthly reporting to Director of IT, DO NOT DELETE ****</description>
    <label>User License</label>
    <nameField>
        <label>User License</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>