force-app/main/default/objects/User_Licenses__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>