force-app/main/default/objects/User_Licenses__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>