force-app/main/default/objects/User_Licenses__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>