force-app/main/default/objects/User_Licenses__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>CreatedDate__c</columns>
    <columns>Department__c</columns>
    <columns>Email__c</columns>
    <columns>License_Type__c</columns>
    <columns>Manager__c</columns>
    <columns>Name__c</columns>
    <columns>Region__c</columns>
    <columns>UserName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>